# CMakeTutorial

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  adder.cpp  adder.h  substract.cpp  substract.h
tests/: CMakeLists.txt  test_adder.cpp  test_substract.cpp
